<resources>
    <string name="app_name">Health Suit Demo</string>
    <string name="no_internet_connection_message">No network available, please check your WiFi or Data connection</string>
    <string name="no_internet_active_message">No internet available, please check your connected WIFi or Data</string>
    <string name="this_is_an_image">this is an image</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="order_now">Order Now</string>
    <string name="description">Description</string>
    <string name="need_help">NEED HELP?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_">Continue</string>
    <string name="product_name">product name</string>
</resources>